bk_ida/gccida/g0/output_long_octal
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_long_octal/src/diagnostic.c:931:26: error: unknown type name 'output_buffer_0'; did you mean 'output_buffer'?
void  output_long_octal( output_buffer_0 *buffer, unsigned __int64 i) 
                         ^~~~~~~~~~~~~~~
                         output_buffer
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_long_octal/src/diagnostic.h:28:30: note: 'output_buffer' declared here
typedef struct output_buffer output_buffer;
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_long_octal/src/diagnostic.c:931:7: error: conflicting types for 'output_long_octal'
void  output_long_octal( output_buffer_0 *buffer, unsigned __int64 i) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_long_octal/src/diagnostic.c:80:13: note: previous declaration is here
static void output_long_octal PARAMS ((output_buffer *, unsigned long int));
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_long_octal/src/diagnostic.c:933:32: error: use of undeclared identifier 'off_76BD31'
sprintf( buffer->digit_buffer, off_76BD31, i); 
                               ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/output_long_octal/src/obj/diagnostic.o] Error 1
